--- a/index.html
+++ b/index.html
@@ -5,46 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            text-align: center;
-        }
-        h1{
-            
-        }
-        .fcontainer{
-            border-style: solid;
-    border-width: 3px;
-    border-color: #4a4a4a;
-    padding: 12px;
-    border-radius: 8px;
-    display: inline-block;
-    width: 60%;
-        }
-        .scontainer{
-    vertical-align: top;
-    display: inline-block;
-    width:8%;
-    min-height: 20px;
-    text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>BINGO BOARD</h1>
 
-    <div class="fcontainer">
+    <div id="fcontainer">
         <div >
-        <div class="bing">1</div>
-        <div class="bing">2</div>
-        <div class="bing">3</div>
-        <div class="bing">4</div>
-        <div class="bing">5</div>
-        <div class="bing">6</div>
-        <div class="bing">7</div>
+        <div class="cell">1</div>
+        <div class="cell">2</div>
+        <div class="cell">3</div>
+        <div class="cell">4</div>
+        <div class="cell">5</div>
+        <div class="cell">6</div>
+        <div class="cell">7</div>
     </div>
+   <button class="btn" type="text" aria-placeholder="touch here"></button>
     </div>
 
-    
+   <script src="index.js"></script>
 </body>
 </html>
