--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <div class="cell">6</div>
         <div class="cell">7</div>
     </div>
-   <button class="btn" type="text" aria-placeholder="touch here"></button>
     </div>
+
+    <button class="btn"></button>
 
    <script src="index.js"></script>
 </body>
